# sensorium-manifold

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  main.aux  main.fdb_latexmk  main.fls  main.out  pyproject.toml  run.py  sensorium-manifold.txt  thermo.txt
artifacts/: injection_script_example.json
artifacts/experiments/: experiment_results.json  experiment_results.md  experiment_results.tex
docs/: kernel_backends.md
optimizer/: __init__.py  kernel_registry.py  kernels.py  manifold.py  manifold_physics.py  physics_units.py  runtime.py  tokenizer.py
optimizer/metal/: __init__.py  jit.py  manifold_physics.metal  manifold_physics.py  ops.mm  smoke_test.py
optimizer/triton/: __init__.py  manifold_grid_kernels.py  manifold_physics.py  manifold_physics_kernels.py  smoke_test.py  spatial_hash_kernels.py
paper/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
paper/artifacts/: ab_repeat_branch_transitions_top.json  abc_abd_abe_transitions_top.json  collision_units256_len256_seed42_rate0.1_transitions_top.json  collision_units256_len256_seed42_rate0.3_transitions_top.json  collision_units256_len256_seed42_rate0.5_transitions_top.json  collision_units256_len256_seed42_rate0.7_transitions_top.json  collision_units256_len256_seed42_rate0.9_transitions_top.json  collisionexperiment_medium_collision_s42_transitions_top.json  collisionexperiment_medium_collision_s43_transitions_top.json  collisionexperiment_medium_collision_s44_transitions_top.json  collisionexperiment_medium_collision_s45_transitions_top.json  collisionexperiment_medium_collision_s46_transitions_top.json  collisionexperiment_medium_collision_transitions_top.json  collisionexperiment_medium_repeated_ab_s45_transitions_top.json  collisionexperiment_medium_repeated_ab_transitions_top.json  collisionexperiment_medium_wikitext_s45_transitions_top.json  collisionexperiment_raw_provenance.jsonl  concurrent_256_transitions_top.json  concurrent_3_s43_transitions_top.json  concurrent_64_s46_transitions_top.json  kernelscaling_raw_provenance.jsonl  text_diffusion_output.txt  wave_trie_filesystem_corpus_paper_seed42_transitions_top.json  wave_trie_raw_provenance.jsonl  wave_trie_repeated_AB_seed42_transitions_top.json  wave_trie_text_prefix_AB_CvD_seed42_transitions_top.json
paper/backup/: CollisionExperiment_summary.tex  ablation.tex  ablation_summary.tex  collision_summary.tex  (+10 more)
sensorium/: __init__.py  console.py  manifold.py
tests/: __init__.py  baseline_sorted.json  baseline_v1.json  benchmark_suite.py  run_tests.sh  test_distributed_pipeline_smoke.py  test_gas_dynamics.py  test_geometric_physics.py  test_inference_auto_dark_query.py  test_manifold_integration.py  test_spectral_carriers.py  test_sql_observer.py  test_triton_thermo_smoke.py
thermo_manifold/: __init__.py
(+261 files in other folders)
